# bfm

./: .gitignore  FAQ  Fmb-bulk-rename.desktop.in.in  Fmb-folder-handler.desktop.in.in  Fmb.desktop.in.in  FmbBulkRename.in  HACKING  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  configure.ac.in  fmb.appdata.xml.in  org.blade.FileManager.service.in  org.blade.Fmb.service.in  org.blade.fmb.policy.in.in
docs/: Fmb.xml  Makefile.am  README.gtkrc
docs/design/: mime.xmi  overview.xmi
docs/papers/: Makefile.am
docs/reference/: Makefile.am
docs/reference/fmbx/: Makefile.am  fmbx-docs.sgml  fmbx-sections.txt  fmbx.types
docs/reference/fmbx/tmpl/: fmbx-file-info.sgml  fmbx-menu-provider.sgml  fmbx-preferences-provider.sgml  fmbx-property-page-provider.sgml  fmbx-property-page.sgml  fmbx-provider-factory.sgml  fmbx-provider-plugin.sgml  fmbx-renamer-provider.sgml  fmbx-renamer.sgml  fmbx-version-information.sgml
examples/: Makefile.am  fmb-file-manager.py  nautilus-bulk-rename.py  xfce-file-manager.py
examples/tex-open-terminal/: Makefile.am  README  tex-open-terminal-plugin.c  tex-open-terminal.c  tex-open-terminal.h
fmb/: Makefile.am  fmb-abstract-dialog.c  fmb-abstract-dialog.h  fmb-abstract-icon-view-ui.xml  fmb-abstract-icon-view.c  fmb-abstract-icon-view.h  fmb-application.c  fmb-application.h  fmb-browser.c  fmb-browser.h  fmb-chooser-button.c  fmb-chooser-button.h  fmb-chooser-dialog.c  fmb-chooser-dialog.h  fmb-chooser-model.c  fmb-chooser-model.h  fmb-clipboard-manager.c  fmb-clipboard-manager.h  fmb-column-editor.c  fmb-column-editor.h  fmb-column-model.c  fmb-column-model.h  fmb-compact-view.c  fmb-compact-view.h  fmb-component.c  fmb-component.h  fmb-create-dialog.c  fmb-create-dialog.h  fmb-dbus-client.c  fmb-dbus-client.h  fmb-dbus-service-infos.xml  fmb-dbus-service.c  fmb-dbus-service.h  fmb-deep-count-job.c  fmb-deep-count-job.h  fmb-details-view-ui.xml  fmb-details-view.c  fmb-details-view.h  fmb-device-monitor.c  fmb-device-monitor.h  (+153 more)
fmbx/: Makefile.am  abicheck.sh  fmbx-2.pc.in  fmbx-config.c  fmbx-config.h.in  fmbx-file-info.c  fmbx-file-info.h  fmbx-menu-provider.c  fmbx-menu-provider.h  fmbx-preferences-provider.c  fmbx-preferences-provider.h  fmbx-private.c  fmbx-private.h  fmbx-property-page-provider.c  fmbx-property-page-provider.h  fmbx-property-page.c  fmbx-property-page.h  fmbx-provider-factory.c  fmbx-provider-factory.h  fmbx-provider-module.c  fmbx-provider-module.h  fmbx-provider-plugin.c  fmbx-provider-plugin.h  fmbx-renamer-provider.c  fmbx-renamer-provider.h  fmbx-renamer.c  fmbx-renamer.h  fmbx.h  fmbx.symbols
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
pixmaps/: Makefile.am
plugins/: Makefile.am
plugins/fmb-apr/: Makefile.am  README  fmb-apr-abstract-page.c  fmb-apr-abstract-page.h  fmb-apr-desktop-page.c  fmb-apr-desktop-page.h  fmb-apr-image-page.c  fmb-apr-image-page.h  fmb-apr-plugin.c  fmb-apr-private.c  fmb-apr-private.h  fmb-apr-provider.c  fmb-apr-provider.h
plugins/fmb-sbr/: Makefile.am  README  fmb-sbr-case-renamer.c  fmb-sbr-case-renamer.h  fmb-sbr-date-renamer.c  fmb-sbr-date-renamer.h  fmb-sbr-enum-types.c  fmb-sbr-enum-types.h  fmb-sbr-insert-renamer.c  fmb-sbr-insert-renamer.h  fmb-sbr-number-renamer.c  fmb-sbr-number-renamer.h  fmb-sbr-plugin.c  fmb-sbr-provider.c  fmb-sbr-provider.h  fmb-sbr-remove-renamer.c  fmb-sbr-remove-renamer.h  fmb-sbr-replace-renamer.c  fmb-sbr-replace-renamer.h
plugins/fmb-sendto-email/: Makefile.am  README  fmb-sendto-email.desktop.in.in  main.c
plugins/fmb-tpa/: Makefile.am  README  fmb-tpa-bindings.xml  fmb-tpa.c  fmb-tpa.desktop.in
plugins/fmb-uca/: Makefile.am  README  fmb-uca-chooser.c  fmb-uca-chooser.h  fmb-uca-context.c  fmb-uca-context.h  fmb-uca-editor.c  fmb-uca-editor.h  fmb-uca-model.c  fmb-uca-model.h  fmb-uca-plugin.c  fmb-uca-private.c  fmb-uca-private.h  fmb-uca-provider.c  fmb-uca-provider.h  uca.xml.in
plugins/fmb-wallpaper/: Makefile.am  README  fmb-wallpaper-plugin.c  twp-provider.c  twp-provider.h
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  (+22 more)
