AM_CPPFLAGS =								\
	-DGLIB_DISABLE_DEPRECATION_WARNINGS \
	-I$(top_srcdir)							\
	-DG_LOG_DOMAIN=\"fmbx\"					\
	-DFMBX_COMPILATION						\
	-DFMBX_DIRECTORY=\"$(libdir)/fmbx-$(FMBX_VERSION_API)\"	\
	$(PLATFORM_CPPFLAGS)

libfmbx_headers =							\
	fmbx.h							\
	fmbx-config.h						\
	fmbx-file-info.h						\
	fmbx-menu-provider.h						\
	fmbx-preferences-provider.h					\
	fmbx-property-page.h						\
	fmbx-property-page-provider.h				\
	fmbx-provider-factory.h					\
	fmbx-provider-plugin.h					\
	fmbx-renamer.h						\
	fmbx-renamer-provider.h

libfmbx_includedir =							\
	$(includedir)/fmbx-$(FMBX_VERSION_API)/fmbx

libfmbx_include_HEADERS =						\
	$(libfmbx_headers)

lib_LTLIBRARIES =							\
	libfmbx-2.la

libfmbx_2_la_SOURCES =						\
	$(libfmbx_headers)						\
	fmbx-config.c						\
	fmbx-file-info.c						\
	fmbx-menu-provider.c						\
	fmbx-preferences-provider.c					\
	fmbx-private.c						\
	fmbx-private.h						\
	fmbx-property-page.c						\
	fmbx-property-page-provider.c				\
	fmbx-provider-factory.c					\
	fmbx-provider-module.c					\
	fmbx-provider-module.h					\
	fmbx-provider-plugin.c					\
	fmbx-renamer.c						\
	fmbx-renamer-provider.c

libfmbx_2_la_CFLAGS =						\
	$(GLIB_CFLAGS)							\
	$(GIO_CFLAGS)							\
	$(GTK_CFLAGS)							\
	$(GMODULE_CFLAGS)						\
	$(PLATFORM_CFLAGS)

libfmbx_2_la_LDFLAGS =						\
	-export-dynamic							\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined							\
	-version-info $(FMBX_VERINFO)				\
	$(PLATFORM_LDFLAGS)

libfmbx_2_la_LIBADD =						\
	$(GLIB_LIBS)							\
	$(GMODULE_LIBS)							\
	$(GIO_LIBS)							\
	$(GTK_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = fmbx-2.pc

EXTRA_DIST =								\
	abicheck.sh							\
	fmbx.symbols

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES =								\
	actual-abi							\
	expected-abi

TESTS =									\
	abicheck.sh

endif

# required for gtk-doc
dist-hook: all

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
