if FMB_PLUGIN_APR
FMB_APR_SUBDIRS = fmb-apr
endif

if FMB_PLUGIN_SBR
FMB_SBR_SUBDIRS = fmb-sbr
endif

if FMB_PLUGIN_TPA
FMB_TPA_SUBDIRS = fmb-tpa
endif

if FMB_PLUGIN_UCA
FMB_UCA_SUBDIRS = fmb-uca
endif

if FMB_PLUGIN_WALLPAPER
FMB_WALLPAPER_SUBDIRS = fmb-wallpaper
endif

SUBDIRS =								\
	$(FMB_APR_SUBDIRS)						\
	$(FMB_SBR_SUBDIRS)						\
	$(FMB_TPA_SUBDIRS)						\
	$(FMB_UCA_SUBDIRS)						\
	$(FMB_WALLPAPER_SUBDIRS)					\
	fmb-sendto-email

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
